# whitespace_has

./: README.md  whitespace.cabal
app/: Main.hs
src/: Machine.hs  Parser.hs  Stack.hs  Whitespace.hs
test/: Spec.hs
