name:                whitespace
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/matsubara0507/whitespace_has#readme
license:             BSD3
license-file:        LICENSE
author:              MATSUBARA Nobutada
maintainer:          t12307043@gunma-u.ac.jp
copyright:           MATSUBARA Nobutada
category:            Programming Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Whitespace, Parser, Machine, Stack
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , deepseq
  default-language:    Haskell2010

executable whitespace-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , whitespace
  default-language:    Haskell2010

test-suite whitespace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , whitespace
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matsubara0507/whitespace_has
